# sentinel

./: .gitignore  Cargo.toml  LICENSE  README.md  install.sh  sentinel.service  uninstall.sh
configs/: default.yaml  ml-server.yaml
src/: config.rs  daemon.rs  lib.rs  main.rs
src/detector/: aide.rs  canary.rs  entropy.rs  header.rs  mod.rs  velocity.rs
src/ebpf/: mod.rs
src/response/: alert.rs  freeze.rs  mod.rs
src/watcher/: fanotify_watcher.rs  inotify_watcher.rs  mod.rs
