[package]
name = "sentinel"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "Real-time ransomware detection and prevention for Linux servers"
license = "MIT"
repository = "https://github.com/yourusername/sentinel"
keywords = ["security", "ransomware", "ebpf", "linux", "monitoring"]
categories = ["command-line-utilities", "filesystem", "os::linux-apis"]
readme = "README.md"
rust-version = "1.75"

[features]
default = ["full"]
full = ["ebpf", "fanotify", "aide"]
ebpf = ["libbpf-rs", "libbpf-cargo", "plain"]
fanotify = []
aide = []
ml-optimized = []  # Preset for AI/ML servers

[[bin]]
name = "sentinel"
path = "src/main.rs"

[dependencies]
# CLI
clap = { version = "4.5", features = ["derive", "env"] }

# Async runtime
tokio = { version = "1.40", features = ["full"] }

# File system watching
inotify = "0.10"
nix = { version = "0.29", features = ["fanotify", "signal", "process"] }

# eBPF (optional, for process tracing)
libbpf-rs = { version = "0.24", optional = true }
plain = { version = "0.2", optional = true }

# Configuration
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Alerts / Notifications
notify-rust = "4.11"
reqwest = { version = "0.12", features = ["json"], optional = true }

# Process management
procfs = "0.16"
caps = "0.5"

# Hashing (for AIDE-like functionality)
sha2 = "0.10"
blake3 = "1.5"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Daemon
daemonize = "0.5"

# Signal handling
signal-hook = "0.3"
signal-hook-tokio = { version = "0.3", features = ["futures-v0_3"] }

# Glob patterns for exclusions
globset = "0.4"

# Directories
dirs = "5.0"

# Privilege management
privdrop = "0.5"

[build-dependencies]
libbpf-cargo = { version = "0.24", optional = true }

[dev-dependencies]
tempfile = "3.12"
assert_cmd = "2.0"
predicates = "3.1"
tokio-test = "0.4"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
opt-level = 3

[profile.dev]
opt-level = 1

[package.metadata.deb]
maintainer = "Your Name <your.email@example.com>"
copyright = "2025, Your Name"
extended-description = """
Sentinel is a real-time ransomware detection and prevention tool for Linux servers.
It uses entropy analysis, eBPF tracing, and fanotify to detect and stop ransomware
before it destroys your files.
"""
section = "security"
priority = "optional"
assets = [
    ["target/release/sentinel", "usr/bin/", "755"],
    ["configs/default.yaml", "etc/sentinel/config.yaml", "644"],
    ["README.md", "usr/share/doc/sentinel/README", "644"],
]
